# FlexivPy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.MD  README.md  dev_notes.md  docker_build.sh  install_nvim.sh  main.py  modified_robot_v1.urdf  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
FlexivPy/: __init__.py  async_camera_app.py  camera_dds_client.py  joy.py  vision.py
FlexivPy/assets/: flexiv_rizon10s_kinematics.urdf  flexiv_rizon10s_kinematics_w_gripper_mass.urdf  mjmodel.xml  r10s_with_capsules.srdf  r10s_with_capsules.urdf  real_rizon_with_gripper.urdf
FlexivPy/assets/meshes/gripper_s/: base.stl  base_mount.stl  coupler.stl  driver.stl  follower.stl  pad.stl  silicone_pad.stl  spring_link.stl
FlexivPy/assets/meshes/rizon10s/visual/: v_link5_.obj.mtl
FlexivPy/config/: robot.yaml
FlexivPy/controllers/: gripper.py  jointspace.py  mpc.py  runners.py  taskspace.py
FlexivPy/controllers/history/: easy_controllers.py
FlexivPy/cpp/: CMakeLists.txt  FlexivData.idl  argparse.hpp  config.yaml  gravity_comp.cpp  main.cpp  robot_server.cpp  utils.cpp  utils.hpp
FlexivPy/planners/: rrt.py
FlexivPy/robot/: __init__.py  interface.py  robot_client.py
FlexivPy/robot/dds/: flexiv_messages.py  subscriber.py
FlexivPy/robot/model/: model_robot.py  pinocchio.py
FlexivPy/robot/sim/: sim_robot.py  sim_robot_async.py
FlexivPy/robot/vis/: rerunio.py
FlexivPy/sim/: MuJoCo.py  async_engine.py  async_sim_app.py  interface.py  mujoco.py
data/: data_robot_vicon_calib.yaml  data_robot_vicon_calib_v2.yaml
examples/: control_modes.py  easy_controllers.py  fit_model.py  fit_model_pin.py  floating.py  go_home_rrt.py  gripper.py  hello_world.py  image_publisher.py  keyboard_control.py  keyboard_joint_control.py  load_mujoco.py  load_pinocchio.py  main.py  main2.py  move_camera.py  plotter.py  rerun_ft.py  rerun_full_log.py  rerun_urdf.py  robot_to_vicon_calib.py  scale_mesh.py  see_images.py  utils.py  vicon.py  vicon_env_state.py  viewer_dds.py
examples/notebooks/: 3dgs-dataset-collection.ipynb  MUJOCO_LOG.TXT  callibration.ipynb  dds_client.ipynb  diff_IK_controller.ipynb  generate_data_world_model.ipynb  homing.ipynb  joystick.ipynb  mpc_example.ipynb  prepare_data.ipynb  robot_model.ipynb
examples/scripts/: control_modes.py  ethernet_network copy.py  ethernet_network.py  fit_model_find_mass.py  fit_model_record_torque.py  flexiv_sim.py  go_home_rrt.py  gripper.py  hello_world.py  image_publisher.py  keyboard_control.py  keyboard_joint_control.py  load_pinocchio.py  rerun_force_torque_sensor.py  rerun_full_log.py  rerun_plotter.py  robot_to_vicon_calib.py  scale_mesh.py  see_images.py  utils.py  vicon.py  vicon_env_state.py  viewer_dds.py
flexivpy_bridge/: FlexivData.idl  config.yaml  robot_server.cpp
