[metadata]
name = FlexivPy
version = 1.0.0
description = Flexiv Rizon 10s Simulation and Control at 1 KHz with Python + Cyclone DDS + CPP Driver.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quimortiz/FlexivPy
author = Quim Ortiz
author_email = quimortiz21@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
# install_requires =
    # numpy
    # pyzmq>=25.0.0
    # pyyaml>=5.3.1
    # pin
    # proxsuite
    # pin==2.6.18
    # proxsuite==0.3.7
    # pyrealsense2==2.54.1.5217
    # pupil_apriltags
